<resources>
    <string name="app_name">ASK</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notification">Notification</string>
    <string name="boy_image">Boy Image</string>
    <string name="start_learning">Start Learning</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="solutions">Solutions</string>
    <string name="ll_title">Our Exquisite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_product">Product</string>
    <string name="web_app">Web App</string>
    <string name="web">Web Products</string>
    <string name="web_site">Website</string>
    <string name="android">Android Products</string>
    <string name="android_app">Android App</string>
    <string name="web_api">Web API</string>
    <string name="android_api">Android API</string>
    <string name="desktop_app">Desktop App</string>
    <string name="desktop_api">Desktop API</string>
    <string name="desktop">Desktop Products</string>
    <string name="title_form">Form</string>
    <string name="title_services">Services</string>
    <string name="seo_services">SEO Services</string>
    <string name="website_maintenance">Website Maintenance</string>
    <string name="api_services">API Services</string>
    <string name="hardware_solutions">Hardware Solutions</string>
    <string name="desktop_solutions">Desktop Solutions</string>
    <string name="mobile_phone_solutions">Mobile Phone Solutions</string>
    <string name="other_hardware_solutions">Other Hardware Solutions</string>
    <string name="software_solutions">Software Solutions</string>
    <string name="desktop_software_solutions">Desktop Software Solutions</string>
    <string name="mobile_phone_software_solutions">Mobile phone software solutions</string>
    <string name="other_software_solutions">Other Software Solutions</string>
    <string name="technical_solutions">Other Technical Solutions</string>
    <string name="other_technical_support">Technical Support</string>
    <string name="title_solutions">Solutions</string>
    <string name="tv_title_services">Our Services</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="features">Features (separated by \",\")</string>
    <string name="Submit">Submit</string>
    <string name="logo">Logo</string>
    <string name="need_a_solution_just_ask">Need a solution? Just Ask!</string>
    <string name="title_learning">Learning</string>
    <string name="workshop">Workshop</string>
    <string name="internship">Internship</string>
    <string name="training">Training</string>
    <string name="sample_email">xyz@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="no_notifications">No Notifications!</string>
    <string name="login">Login</string>
    <string name="password">Psssword</string>
    <string name="t_amp_c_and_privacy_policy"><![CDATA[T&C and Privacy Policy]]></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="new_user_register">New user? Register!</string>
    <string name="no_orders">No orders!</string>
    <string name="title_settings">Settings</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
</resources>