<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lordsam.ask.view.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_product"
            app:destination="@id/navigation_product" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_services"
            app:destination="@id/navigation_services" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_solutions"
            app:destination="@id/navigation_solutions" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_learning"
            app:destination="@id/navigation_learning" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.lordsam.ask.view.fragments.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lordsam.ask.view.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_orders"
            app:destination="@id/navigation_orders" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_edit_profile"
            app:destination="@id/navigation_edit_profile" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.lordsam.ask.view.fragments.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_navigation_product_to_navigation_web_form"
            app:destination="@id/navigation_web_form" />
    </fragment>

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.lordsam.ask.view.fragments.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" >
        <action
            android:id="@+id/action_navigation_services_to_navigation_web_form"
            app:destination="@id/navigation_web_form" />
    </fragment>

    <fragment
        android:id="@+id/navigation_solutions"
        android:name="com.lordsam.ask.view.fragments.SolutionsFragment"
        android:label="@string/title_solutions"
        tools:layout="@layout/fragment_solutions" >
        <action
            android:id="@+id/action_navigation_solutions_to_navigation_web_form"
            app:destination="@id/navigation_web_form" />
    </fragment>

    <fragment
        android:id="@+id/navigation_web_form"
        android:name="com.lordsam.ask.view.fragments.FormFragment"
        android:label="@string/title_form"
        tools:layout="@layout/fragment_form" >
        <argument
            android:name="type"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_learning"
        android:name="com.lordsam.ask.view.fragments.LearningFragment"
        android:label="@string/title_learning"
        tools:layout="@layout/fragment_learning" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.lordsam.ask.view.fragments.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.lordsam.ask.view.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.lordsam.ask.view.fragments.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>