<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_android_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/android_app"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_android_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/android_api"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_desktop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desktop"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_desktop_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/desktop_app"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_desktop_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/desktop_api"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <Button
                android:id="@+id/btn_web_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/web_site"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_web_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/web_app"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_web_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorSecondaryDark"
                android:text="@string/web_api"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>